--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="AffiRegles.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Affich_mat_avec_coord.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -40,6 +43,7 @@
 		<Unit filename="InitialisationMatriceOrdi.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="header_adrien.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
