--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="AffiRegles.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Affich_mat_avec_coord.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -40,6 +43,12 @@
 		<Unit filename="choix_j.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="distribution_barriere.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gotoligcol.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="jeu.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
@@ -47,7 +56,13 @@
 		<Unit filename="main_menu.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="nombre_joueur.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="setup.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="traduction.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions />
