--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -37,6 +37,9 @@
 		<Unit filename="Affich_mat_avec_coord.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Déplacement.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="InitialisationMatriceOrdi.c">
 			<Option compilerVar="CC" />
 		</Unit>
