--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -74,6 +74,9 @@
 		<Unit filename="main_menu.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menu_cote.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="menu_game.c">
 			<Option compilerVar="CC" />
 		</Unit>
