le score marche toujours pas

--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -62,6 +62,9 @@
 		<Unit filename="Sauvegarde-Charger.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Score.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Tour_par_tour.c">
 			<Option compilerVar="CC" />
 		</Unit>
