--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -68,6 +68,9 @@
 		<Unit filename="Tour_par_tour.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="bonus.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="choix_j.c">
 			<Option compilerVar="CC" />
 		</Unit>
