Implémentation de la fonction save et l'actualisation
- Seulement pour 2J

Reste à faire pour le reste juste à écrire la focntion

--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -71,6 +71,9 @@
 		<Unit filename="Tour_par_tour.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="actualisation_score.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="bonus.c">
 			<Option compilerVar="CC" />
 		</Unit>
