Correction bug gagnner bar et ajout colors

--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -37,6 +37,9 @@
 		<Unit filename="ChoixPion.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Color.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Déplacement.c">
 			<Option compilerVar="CC" />
 		</Unit>
