2e ajout du titre

--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -31,10 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../../../../Adrien local/Affichage_Du_Titre.c">
+		<Unit filename="AffiRegles.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="AffiRegles.c">
+		<Unit filename="Affichage_Du_Titre.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="ChoixPion.c">
