--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -62,6 +62,9 @@
 		<Unit filename="Placer_barriere.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Placer_barriere_v2.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Saisie_coord.c">
 			<Option compilerVar="CC" />
 		</Unit>
