--- a/QuoridorCB/QuoridorCB.cbp
+++ b/QuoridorCB/QuoridorCB.cbp
@@ -92,6 +92,9 @@
 		<Unit filename="gotoligcol.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="ia_v4.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
